--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<section class="about sec-padding" id="about">
 		<div class="container">
 			<h1 class="heading">
-				<span class="first" style="font-size: 40px; font-family: 'Kelly Slab', cursive; ""><u>About Us</u></span>
+				<span class="first" style="font-size: 40px; font-family: 'Kelly Slab', cursive; "><u>About Us</u></span>
 				<p>&nbsp;</p>
 			
 			<div class="row">
